# state_machine

./: CMakeLists.txt  README.md  main.c
libsmachine/: smachine.c  smachine.h
libstatemachine/: CMakeLists.txt  state_ctrl.c  state_ctrl.h
state_machine_app/: CMakeLists.txt  main.c
state_machine_app/states/: state_idle.c  state_idle.h  state_user_setup.c  state_user_setup.h  states_definitions.h
states/: state_idle.c  state_idle.h  state_user_setup.c  state_user_setup.h  states_definitions.h
